set(THIS_MODULE_NAME common)

#aux_source_directory(. SRC_LIST)
 
file(GLOB_RECURSE CURRENT_HEADERS  ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
file(GLOB_RECURSE SRC_LIST  ${CMAKE_CURRENT_SOURCE_DIR}/*.c ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

source_group("Include" FILES ${CURRENT_HEADERS}) 
add_library(${THIS_MODULE_NAME} ${SRC_LIST} ${CURRENT_HEADERS})

# information about THIS_MODULE module
set(THIS_MODULE_MAJOR 1)
set(THIS_MODULE_MINOR 1)
set(THIS_MODULE_PATCH 5)
set(THIS_MODULE_VERSION ${THIS_MODULE_MAJOR}.${THIS_MODULE_MINOR}.${THIS_MODULE_PATCH})
set(THIS_MODULE_DESCRIPTION "${THIS_MODULE_NAME} ")
set(THIS_MODULE_PACKAGE_NAME "${THIS_MODULE_NAME} -${THIS_MODULE_VERSION}-${COMPILER_LABEL}")

set_target_properties(${THIS_MODULE_NAME} PROPERTIES
            COMPILE_DEFINITIONS "Common_EXPORT"
            VERSION "${THIS_MODULE_VERSION}"
            SOVERSION "${THIS_MODULE_MAJOR}")

install(TARGETS ${THIS_MODULE_NAME}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib/static)